--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -68,14 +68,11 @@
                         <div class="header_widget">
 
                             {% if user.is_authenticated %}
-                            <a href="#" class="button border"><i class="fa fa-th"></i> Dashboard</a>
-                            <a href="{% url 'userauths:sign-out' %}" class="button border"><i
-                                    class="fa fa-sign-out"></i> Sign Out</a>
+                            <a href="{% url 'hotel:selected_rooms' %}" class="button border"><i class="fa fa-bed"></i> <span class="room-count">{{request.session.selection_data_obj|length}}</span></a>
+                            <a href="{% url 'userauths:sign-out' %}" class="button border"><i class="fa fa-sign-out"></i> Sign Out</a>
                             {% else %}
-                            <a href="{% url 'userauths:sign-in' %}" class="button border sign-in"><i
-                                    class="fa fa-sign-in"></i> Sign In</a>
-                            <a href="{% url 'userauths:sign-up' %}" class="button border"><i
-                                    class="sl sl-icon-user"></i> Sign Up</a>
+                            <a href="{% url 'userauths:sign-in' %}" class="button border sign-in"><i class="fa fa-sign-in"></i> Sign In</a>
+                            <a href="{% url 'userauths:sign-up' %}" class="button border"><i class="sl sl-icon-user"></i> Sign Up</a>
                             {% endif %}
 
                         </div>
