--- a/templates/user_dashboard/booking_detail.html
+++ b/templates/user_dashboard/booking_detail.html
@@ -127,61 +127,31 @@
         </div>
         <div class="col-lg-6 col-md-6">
             <div class="utf_dashboard_list_box margin-top-0">
-                <h4>Booked Rooms {{booking.room.all.count}}</h4>
+                <h4>Booked Rooms ({{booking.room.all.count}})</h4>
                 <ul>
-                    <li class="utf_approved_booking_listing">
-                        <div class="utf_list_box_listing_item bookings">
-                            <div class="utf_list_box_listing_item_content">
-                                <div class="inner">
-                                    <h3>Francis Burton <span class="utf_booking_listing_status">Approved</span></h3>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Booking Item:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li>The Hot and More Restaurant</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Start Date:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">18 November 2022 at 12:00 am</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>End Date:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">19 November 2022 at 12:00 pm</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Booking Details:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">2 Adults, 2 Children</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Email Address:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">info@example.com</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Phone Number:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">+(012) 1123-254-456</li>
-                                        </ul>
-                                    </div>
-                                    <div class="utf_inner_booking_listing_list">
-                                        <h5>Price:-</h5>
-                                        <ul class="utf_booking_listing_list">
-                                            <li class="highlighted">$ 249</li>
-                                        </ul>
+                    {% for r in booking.room.all %}    
+                        <li class="utf_approved_booking_listing">
+                            <div class="utf_list_box_listing_item bookings">
+                                <div class="utf_list_box_listing_item_content">
+                                    <div class="inner">
+                                        <h3>{{r.room_type.type}}</h3>
+                                        <div class="utf_inner_booking_listing_list">
+                                            <h5>Room Number:-</h5>
+                                            <ul class="utf_booking_listing_list">
+                                                <li>{{r.room_number}}</li>
+                                            </ul>
+                                        </div>
+                                        <div class="utf_inner_booking_listing_list">
+                                            <h5>Room Price:-</h5>
+                                            <ul class="utf_booking_listing_list">
+                                                <li class="highlighted">${{r.room_type.price}}</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="buttons-to-right"> <a href="#" class="button gray reject"><i
-                                    class="sl sl-icon-close"></i> Cancel</a> </div>
-                    </li>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
