Complet User Dashboard

--- a/templates/hotel/hotel_detail.html
+++ b/templates/hotel/hotel_detail.html
@@ -30,20 +30,20 @@
                         <div class="utf_counter_star_rating">(4.5) / (14 Reviews)</div>
                     </div>
                     <ul class="listing_item_social">
-                        <li><a href="#"><i class="fa fa-bookmark"></i> Bookmark</a></li>
+
+                        {% if bookmark %}
+                            <li><a data-hotel="{{hotel.id}}" class="add-to-bookmark-{{hotel.id}}"
+                                    id="add-to-bookmark"><i class="fa fa-heart" style="color: red;"></i> </a></li>
+                        {% else %}
+                            <li><a data-hotel="{{hotel.id}}" class="add-to-bookmark-{{hotel.id}}"
+                                    id="add-to-bookmark"><i class="fa fa-heart" style="color: grey;"></i> </a></li>
+                        {% endif %}
+
                         <li><a href="#"><i class="fa fa-star"></i> Add Review</a></li>
                         <li><a href="#"><i class="fa fa-flag"></i> Featured</a></li>
                         <li><a href="#"><i class="fa fa-share"></i> Share</a></li>
                         <li><a href="#" class="now_open">Open Now</a></li>
                     </ul>
-                    <div class="utf_room_detail">
-                        <ul>
-                            <li>3 Rooms</li>
-                            <li>3 Bed Room</li>
-                            <li>4 Bed</li>
-                            <li>3 Bath Room</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
             <div id="utf_listing_overview" class="utf_listing_section">
@@ -78,16 +78,17 @@
                     <div class="utf_pricing_list_section">
                         <h4>Room Types</h4>
                         <ul>
-                            
+
                             {% for hotel_room_type in hotel.hotel_room_types.all %}
-                                <li>
-                                    <h5>{{hotel_room_type.type}}</h5>
-                                    <p><strong>Price: </strong> {{hotel_room_type.price}} person</p>
-                                    <p><strong>Room Capacity: </strong> {{hotel_room_type.room_capacity}} person</p>
-                                    <p><strong>Number of Beds: </strong> {{hotel_room_type.number_of_beds}} Beds</p>
-                                    <p><a href="{% url 'hotel:room-type-detail' hotel_room_type.hotel.slug hotel_room_type.slug %}" style="border-bottom: 2px gray dashed;margin-top: 10px;">View More</a></p>
-                                    <span>${{hotel_room_type.price}}</span>
-                                </li>
+                            <li>
+                                <h5>{{hotel_room_type.type}}</h5>
+                                <p><strong>Price: </strong> {{hotel_room_type.price}} person</p>
+                                <p><strong>Room Capacity: </strong> {{hotel_room_type.room_capacity}} person</p>
+                                <p><strong>Number of Beds: </strong> {{hotel_room_type.number_of_beds}} Beds</p>
+                                <p><a href="{% url 'hotel:room-type-detail' hotel_room_type.hotel.slug hotel_room_type.slug %}"
+                                        style="border-bottom: 2px gray dashed;margin-top: 10px;">View More</a></p>
+                                <span>${{hotel_room_type.price}}</span>
+                            </li>
                             {% endfor %}
                         </ul>
                     </div>
@@ -387,7 +388,8 @@
             <div class="utf_box_widget booking_widget_box">
                 <h3><i class="fa fa-calendar"></i> Check Room Availibity</h3>
                 <div class="row with-forms margin-top-0">
-                    <form action="{% url 'booking:check_room_availability' %}" method="post" class="row with-forms margin-top-0">
+                    <form action="{% url 'booking:check_room_availability' %}" method="post"
+                        class="row with-forms margin-top-0">
                         {% csrf_token %}
                         <input type="hidden" name="hotel_id" value="{{hotel.id}}" id="hotel_id">
                         <div class="col-lg-12 col-md-12 select_date_box">
@@ -417,9 +419,9 @@
                             <div class="col-lg-12 col-md-12">
                                 <a href="#">Select Room Type</a>
                                 <select name="room_type" id="room_type" class="utf_chosen_select_single">
-                                    
+
                                     {% for r in hotel.hotel_room_types %}
-                                        <option value="{{r.slug}}">{{r.type}}</option>
+                                    <option value="{{r.slug}}">{{r.type}}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -784,4 +786,3 @@
 <script src="{% static 'scripts/quantityButtons.js' %}"></script>
 <script src="{% static 'scripts/daterangepicker.js' %}"></script>
 {% endblock javascript %}
-    
