--- a/templates/hotel/selected_rooms.html
+++ b/templates/hotel/selected_rooms.html
@@ -10,7 +10,7 @@
                 <h2>All Room Selection</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li>All Room Selection</li>
                     </ul>
                 </nav>
