--- a/templates/user_dashboard/bookings.html
+++ b/templates/user_dashboard/bookings.html
@@ -9,7 +9,7 @@
                 <h2>My Listings</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li>My Listings</li>
                     </ul>
