--- a/templates/userauths/sign-in.html
+++ b/templates/userauths/sign-in.html
@@ -10,7 +10,7 @@
                 <h2>Sign Up</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li>Sign Up</li>
                     </ul>
                 </nav>
