--- a/templates/hotel/checkout.html
+++ b/templates/hotel/checkout.html
@@ -9,7 +9,7 @@
                 <h2>Choose Payment Option</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li>Choose Payment Option</li>
                     </ul>
                 </nav>
