--- a/templates/partials/dashboard_base.html
+++ b/templates/partials/dashboard_base.html
@@ -46,8 +46,8 @@
             <div id="header" class="not-sticky">
                 <div class="container">
                     <div class="utf_left_side">
-                        <div id="logo"> <a href="index_1.html"><img src="{% static 'images/logo.png' %}" alt=""></a> <a
-                                href="index_1.html" class="dashboard-logo"><img src="{% static 'images/logo2.png' %}"
+                        <div id="logo"> <a href="/"><img src="{% static 'images/logo.png' %}" alt=""></a> <a
+                                href="/" class="dashboard-logo"><img src="{% static 'images/logo2.png' %}"
                                     alt=""></a> </div>
                         <div class="mmenu-trigger">
                             <button class="hamburger utfbutton_collapse" type="button">
@@ -58,7 +58,7 @@
                         </div>
                         <nav id="navigation" class="style_one">
                             <ul id="responsive">
-                                <li><a href="#">Home</a></li>
+                                <li><a href="/">Home</a></li>
                             </ul>
                         </nav>
                         <div class="clearfix"></div>
@@ -107,7 +107,7 @@
                                             Messages</a></li>
                                     <li><a href="dashboard_bookings.html"><i class="sl sl-icon-docs"></i> Booking</a>
                                     </li>
-                                    <li><a href="index_1.html"><i class="sl sl-icon-power"></i> Logout</a></li>
+                                    <li><a href="/"><i class="sl sl-icon-power"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </div>
