--- a/templates/user_dashboard/booking_detail.html
+++ b/templates/user_dashboard/booking_detail.html
@@ -9,7 +9,7 @@
                 <h2>Bookings</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li>Bookings</li>
                     </ul>
