--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -9,7 +9,7 @@
                 <h2>Dashboard</h2>
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="index_1.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li>Dashboard</li>
                     </ul>
                 </nav>
